Finish the application Convert Divisa to latinoamerica

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <main>
             <section id="formulario">
                 <form action="" name="form">
-                    <input type="text" id="numberCurrency" name="numberCurrency">
+                    <input type="text" id="numberCurrency" name="numberCurrency" placeholder="Ingrese monto">
                     <select name="currencyCountry" id="currencyCountry">
-                        <option value="" selected disabled> Moneda de un Pais</option>
+                        <option value="defecto" selected disabled> Moneda de un Pais</option>
                         <option value="argentina">Argentina</option>
                         <option value="colombia">Colombia</option>
                         <option value="chile">Chile</option>
